feat: updated schema json model
- Added Schema.name
- Resolved sonar warnings/suggestions
- Added equals, hashcode and toString methods to Column, Schema and Table